commit on rps_ui

--- a/index.html
+++ b/index.html
@@ -6,8 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors</title>
     <script src="javascript.js"></script>
+    <link rel="stylesheet" href="styles.css">
+    
 </head>
 <body>
-    
+    <header></header>
+    <h1>Rock Paper Scissors</h1>
+    <div id = "scoreBoard">
+        <h1>Round : 1</h1>
+        <h1>Score</h1>
+        <h3>Computer Score: </h3>
+        <h3>Player Score: </h3>
+    </div>
+    <div id = "buttons">
+        <button>rock</button>
+        <button>paper</button>
+        <button>scissors</button>
+    </div>
+    <footer></footer>
 </body>
 </html>
