--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rock Paper Scissors </title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <h1>Rock Paper Scissors</h1>
     </header>
     <div class="score">
-        <div id="player_label" class="badge">Player</div>;
-        <div id="computer_label" class="badge">Computer</div>;
-        <span id="player_score">0</span>:<span id="computer _score">0</span>;
+        <div id="player_label" class="badge">Player</div>
+        <div id="computer_label" class="badge">Computer</div>
+        <span id="player_score">0</span>:<span id="computer _score">0</span>
     </div>
 
     <div class="result">
@@ -21,20 +22,24 @@
     </div>
 
     <div class="choices">
-        <div class="choice">
-            <img src="/img/rock_button.jpg" 
+        <div class="choice" id="rock">
+            <img src="img/rock_button.jpg" 
             alt="A simple image of a hand making a fist representing the rock
-            choice">;
+            choice">
         </div>
-        <div class="choice">
-            <img src="/img/paper_button.jpg" 
-            alt="A simple image of a flat hand representing the rock choice">;
+        <div class="choice" id="paper">
+            <img src="img/paper_button.jpg" 
+            alt="A simple image of a flat hand representing the rock choice">
         </div>
-        <div class="choice">
-            <img src="/img/scissors_button.jpg" 
+        <div class="choice" id="scissors">
+            <img src="img/scissors_button.jpg" 
             alt="A simple image of a hand holding out two fingers representing
-            the scissors choice">;
+            the scissors choice">
         </div>
     </div>
+
+    <p id="message">Choose carefully...</p>
+
+    <script src="javascript.js" charset="utf-8"></script>
 </body>
 </html>
