commit on rps_ui

--- a/index.html
+++ b/index.html
@@ -14,24 +14,24 @@
     <div class="score">
         <div id="player_label" class="badge">Player</div>
         <div id="computer_label" class="badge">Computer</div>
-        <span id="player_score">0</span>:<span id="computer _score">0</span>
+        <span id="player_score">0</span>:<span id="computer_score">0</span>
     </div>
 
     <div class="result">
-        <p>Paper covers Rock. You win!</p>
+        <p>Let's begin!</p>
     </div>
 
     <div class="choices">
-        <div class="choice" id="rock">
+        <div class="choice" id="Rock">
             <img src="img/rock_button.jpg" 
             alt="A simple image of a hand making a fist representing the rock
             choice">
         </div>
-        <div class="choice" id="paper">
+        <div class="choice" id="Paper">
             <img src="img/paper_button.jpg" 
             alt="A simple image of a flat hand representing the rock choice">
         </div>
-        <div class="choice" id="scissors">
+        <div class="choice" id="Scissors">
             <img src="img/scissors_button.jpg" 
             alt="A simple image of a hand holding out two fingers representing
             the scissors choice">
